@@ -1,0 +1,18 @@
+<?xml version="1.0"?>
+<object name="portal_actions"
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <object name="object">
+  <object name="interfaces" meta_type="CMF Action" i18n:domain="cmf_default">
+   <property name="title" i18n:translate="">Interfaces</property>
+   <property name="description"
+      i18n:translate="">Assign marker interfaces</property>
+   <property name="url_expr">string:${object_url}/edit-markers.html</property>
+   <property name="icon_expr"></property>
+   <property name="available_expr"></property>
+   <property name="permissions">
+    <element value="Manage portal"/>
+   </property>
+   <property name="visible">True</property>
+  </object>
+ </object>
+</object>
